Fix manifest and content script

--- a/public/manifest.json
+++ b/public/manifest.json
@@ -9,13 +9,10 @@
     "service_worker": "background.js",
     "type": "module"
   },
-  "action": {
-    "default_popup": "popup.html"
-  },
   "content_scripts": [
     {
       "matches": ["<all_urls>"],
-      "js": ["content-script.js"]
+      "js": ["content.js"]
     }
   ]
 }
